SWAG API文档优化
