# routers/menu_router.go
@@ -12,6 +12,7 @@ func (router RouterGroup) MenuRouter() {
 	router.GET("menu_names", app.MenuNameList)
 	router.PUT("menus/:id", middleware.JwtAuth(), app.MenuUpdateView)
 	router.DELETE("menus", middleware.JwtAuth(), app.MenuRemoveView)
+	router.GET("menus/detail", app.MenuDetailByPathView)
 	router.GET("menus/:id", app.MenuDetailView)
 
 }
